[build_sphinx]
source-dir = docs
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

[metadata]
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

[aliases]
test = pytest

[tool:pytest]
addopts = -vv -r a
markers = internet: tests that require Internet access

[bdist_wheel]
universal = 1
